--- a/package.json
+++ b/package.json
@@ -6,6 +6,14 @@
     "engines": {
         "vscode": "^1.59.0"
     },
+    "repository": {
+        "type": "git",
+        "url": "https://github.com/avidworks/arctis.git"
+    },
+    "galleryBanner": {
+        "color": "#2E3440",
+        "theme": "dark"
+    },
     "keywords": [
         "Theme",
         "Dark Theme",
@@ -14,7 +22,7 @@
         "Noctis",
         "Accessible Theme",
         "Dark Theme For Daylight",
-        "Cool Colors",
+        "Cool Colors"
     ],
     "categories": [
         "Themes"
