--- a/package.json
+++ b/package.json
@@ -6,6 +6,7 @@
     "engines": {
         "vscode": "^1.59.0"
     },
+    "publisher": "avidworks",
     "repository": {
         "type": "git",
         "url": "https://github.com/avidworks/arctis.git"
