--- a/package.json
+++ b/package.json
@@ -2,7 +2,7 @@
 	"name": "arctis",
 	"displayName": "Arctis",
 	"description": "A perfect blend of Nord and Noctis for comfortable coding all day long.",
-	"version": "1.1.0",
+	"version": "1.2.0",
 	"engines": {
 		"vscode": "^1.59.0"
 	},
@@ -19,6 +19,9 @@
 		"Theme",
 		"Dark Theme",
 		"Medium Dark Theme",
+		"Light Theme",
+		"Accessible Theme",
+		"Arctic",
 		"Nord",
 		"Noctis",
 		"Cool Colors",
@@ -40,6 +43,11 @@
 				"label": "Arctis Dark",
 				"uiTheme": "vs-dark",
 				"path": "./themes/Arctis-Dark-color-theme.json"
+			},
+			{
+				"label": "Arctis Light",
+				"uiTheme": "vs",
+				"path": "./themes/Arctis-Light-color-theme.json"
 			}
 		]
 	}
